[tool.poetry]
name = "edpb"
version = "0.1.0"
description = "Elite Dangerous Price Bot, for Discord"
authors = ["Bruno Marques <bruno@bmarques.net>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
